--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -22,6 +22,7 @@ body {
 .navbar {
     margin-bottom: 0;
     border-radius: 0;
+    background-color: blueviolet !important;
 }
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
