--- a/src/main/resources/templates/registrationConfirmed.html
+++ b/src/main/resources/templates/registrationConfirmed.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <div th:replace="header :: header"/>
-    <title>Blog Logout Page</title>
+    <title>Register Confirm</title>
 </head>
 <body>
 <div th:insert="nav :: navigation"></div>
@@ -11,17 +11,17 @@
         <div class="col-sm-2 sidenav" th:insert="sideLeft :: sideLeft">
 
         </div>
-        <div class="col-sm-8 text-center">
+        <div class="col-sm-8">
             <div class="container-fluid">
                 <div class="panel panel panel-default">
                     <div class="panel-heading">
                         <h3 class="panel-title">
-                            Wylogowanie!
+                            Rejestracja
                         </h3>
                     </div>
                     <div class="panel-body">
                         <p>
-                            Poprawne wylogowanie z serwisu.
+                            Rejestracja przebiegła pomyślnie. Możesz się zalogować.
                         </p>
                     </div>
                 </div>
