--- a/src/main/resources/templates/articlesView.html
+++ b/src/main/resources/templates/articlesView.html
@@ -9,6 +9,7 @@
 <div class="container-fluid text-center">
     <div class="row content">
         <div class="col-sm-2 sidenav" th:insert="sideLeft :: sideLeft">
+
         </div>
         <div class="container-fluid col-sm-8 text-left" id="mainText">
             <div class="col-sm-10 text-center">
@@ -56,6 +57,9 @@
                 </table>
             </div>
             -->
+            <div class="col-sm-2 sidenav" th:insert="sideRight :: sideRight">
+
+            </div>
         </div>
     </div>
 </div>
