--- a/src/main/resources/templates/badUser.html
+++ b/src/main/resources/templates/badUser.html
@@ -2,10 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <div th:replace="header :: header"/>
-    <title>Blog Logout Page</title>
+    <title>Bad User or Password</title>
 </head>
 <body>
-<div th:insert="nav :: navigation"></div>
+
+<div th:replace="nav :: navigation"></div>
 <div class="container-fluid text-center">
     <div class="row content">
         <div class="col-sm-2 sidenav" th:insert="sideLeft :: sideLeft">
@@ -16,12 +17,12 @@
                 <div class="panel panel panel-default">
                     <div class="panel-heading">
                         <h3 class="panel-title">
-                            Wylogowanie!
+                            Bad Login or Password!
                         </h3>
                     </div>
                     <div class="panel-body">
                         <p>
-                            Poprawne wylogowanie z serwisu.
+
                         </p>
                     </div>
                 </div>
@@ -32,6 +33,7 @@
         </div>
     </div>
 </div>
+
 <div th:insert="footer :: copyright"></div>
 </body>
 </html>
