--- a/src/main/resources/templates/loginFormView.html
+++ b/src/main/resources/templates/loginFormView.html
@@ -13,7 +13,7 @@
         </div>
         <div class="col-sm-8">
             <div class="container-fluid">
-                <form class="form-horizontal" action="login" th:action="@{/login}" th:method="post">
+                <form class="form-horizontal" action="/login" th:action="@{/login}" th:method="post">
                     <div class="form-group row">
                         <div class="col-sm-1 text-right">
                             <label class="col-form-label" for="login">Login:</label>
